--- a/modules/autoscaling/cloud_config.yaml
+++ b/modules/autoscaling/cloud_config.yaml
@@ -11,10 +11,12 @@ write_files:
           "netloc": "${hostname}:${port}"
         }
 runcmd:
-  - curl -sL https://api.github.com/repos/scottwinkler/vanilla-webserver-src/releases/latest | jq -r ".assets[].browser_download_url" | wget -qi - 
-  - unzip deployment.zip
-  - ./deployment/server
+  - sudo yum update -y
+  - sudo yum install git -y
+  - sudo yum install gcc g++ make -y
+  - git clone https://github.com/gilles-christian/simple-inventory-app-lab
 packages:
   - jq
   - wget
-  - unzip 
+  - unzip
+  - node
